[package]
name = "env-rs"
version = "0.1.0"
authors = ["test@example.com"]
edition = "2024"
license = "MIT"
description = "Load environment variables from dev/prod files"
repository = "https://github.com/yonasBSD/env.rs"
readme = "README.md"
keywords = ["env", "rust"]

[features]
coverage = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
anyhow = "1.0.100"
dotenvy = { version = "0.15" }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tempfile = "3.24"

[[example]]
name = "dev-prod"
required-features = ["tracing"]
